--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>HH Up Prototype</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Palui+SP&display=swap" rel="stylesheet">
@@ -473,6 +473,37 @@
     background-color: #d32f2f;
 }
 
+@media (max-width: 768px) {
+    .logo-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .logo {
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
+    }
+    .logo-text {
+        width: auto;
+        padding: 5px 10px;
+        font-size: 14px;
+    }
+    .short {
+        width: 100%; 
+        height: auto;
+    }
+    .chat-container {
+        width: 100%;
+        right: 0;
+        bottom: 0;
+    }
+    .welcome-section {
+        padding: 50px 10px;
+    }
+    h2 {
+        font-size: 1.2rem;
+    }
+}
 
 
     </style>
@@ -821,4 +852,3 @@ function bookmarkVideo() {
 
 </body>
 </html>
-
