--- a/bookmarked.html
+++ b/bookmarked.html
@@ -32,6 +32,18 @@
             cursor: pointer;
             width: 200px;
         }
+
+        @media (max-width: 768px) {
+    video {
+        width: 100%;
+        max-width: 100%; 
+    }
+    .button {
+        width: 90%;
+        font-size: 14px;
+    }
+}
+
     </style>
 </head>
 <body>
@@ -52,9 +64,10 @@
             const bookmarkedVideos = users[currentUserEmail].bookmarkedVideos || [];
             const bookmarkedContainer = document.getElementById("bookmarkedVideos");
 
-            bookmarkedContainer.innerHTML = bookmarkedVideos.length
-                ? bookmarkedVideos.map(video => `<video src="${video.src}" controls></video>`).join("")
-                : "<p>Нет сохраненных видео.</p>";
+            bookmarkedContainer.innerHTML = likedVideos.length
+                ? likedVideos.map(video => `<video src="${video.src}" controls style="width:100%;"></video>`).join("")
+                : "<p>Нет окликнутых видео.</p>";
+
         });
     </script>
 </body>
